--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "repository": "#",
   "license": "UNLICENSED",
+  "main": "script.js",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --open",
+    "deploy": "gh-pages -d dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
-    "webpack-merge": "^5.8.0"
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
@@ -19,6 +21,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^4.0.0",
     "gsap": "^3.10.4",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
